menu fix (absolutely forbidding scrollbars), and setting package.json version to 0.1.9 (matching chrome)

--- a/data/menu.css
+++ b/data/menu.css
@@ -1,5 +1,5 @@
 *:focus{outline: 0;}
-body {margin: 0; padding: 0; font-size: 12px; font-family: arial; background: #fff;}
+body {margin: 0; padding: 0; overflow: hidden; font-size: 12px; font-family: arial; background: #fff;}
 body > .menu-wrap > ul.app-menu {position: relative; width: 180px; list-style: none; background: none;}
 body > .menu-wrap > ul.app-menu li a {display: block; padding: 7px 0 7px 32px; color: #000; text-decoration: none;}
 body > .menu-wrap > ul.app-menu li a img {position: absolute; left: 7px; margin-top: -3px;}
